objects/Competitors__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <formula>Competitor_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incumbent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Competitor</label>
        <type>Checkbox</type>
    </fields>
    <label>Competitors</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>